--- a/src/main/resources/org/proview/test/SearchResultView.fxml
+++ b/src/main/resources/org/proview/test/SearchResultView.fxml
@@ -2,8 +2,10 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.SearchResultView">
@@ -11,7 +13,7 @@
       <fx:include source="NavBar.fxml" />
    </top>
    <right>
-      <AnchorPane prefHeight="578.0" prefWidth="93.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="578.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
    </right>
    <bottom>
       <AnchorPane prefHeight="49.0" prefWidth="1000.0" BorderPane.alignment="CENTER" />
@@ -20,15 +22,29 @@
       <AnchorPane prefHeight="578.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
    </left>
    <center>
-      <AnchorPane prefHeight="578.0" prefWidth="1026.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label layoutX="62.0" layoutY="28.0" prefHeight="30.0" prefWidth="499.0" text="Top results">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <ListView fx:id="topResultListView" layoutX="61.0" layoutY="81.0" prefHeight="115.0" prefWidth="500.0" />
-         </children>
-      </AnchorPane>
+      <ScrollPane BorderPane.alignment="CENTER">
+         <content>
+            <VBox>
+               <children>
+                  <AnchorPane prefHeight="578.0" prefWidth="1026.0">
+                     <children>
+                        <Label layoutX="62.0" layoutY="28.0" prefHeight="30.0" prefWidth="499.0" text="Top results">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
+                        <ListView fx:id="topResultListView" layoutX="61.0" layoutY="81.0" prefHeight="115.0" prefWidth="500.0" />
+                        <Label layoutX="605.0" layoutY="28.0" prefHeight="30.0" prefWidth="499.0" text="More results from Google Books">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
+                        <ListView fx:id="googleBookListView" layoutX="604.0" layoutY="81.0" prefHeight="115.0" prefWidth="500.0" />
+                     </children>
+                  </AnchorPane>
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
    </center>
 </BorderPane>
