--- a/src/main/resources/org/proview/test/BookInfo.fxml
+++ b/src/main/resources/org/proview/test/BookInfo.fxml
@@ -8,47 +8,71 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="770.0" prefWidth="1412.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.BookInfoView">
+<BorderPane prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.BookInfoView">
    <top>
       <fx:include source="NavBar.fxml" />
    </top>
    <center>
       <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="1187.0">
          <children>
-            <AnchorPane prefHeight="465.0" prefWidth="908.0">
+            <AnchorPane prefHeight="555.0" prefWidth="1047.0">
                <children>
                   <Label fx:id="titleLabel" layoutX="14.0" layoutY="14.0" prefHeight="88.0" prefWidth="842.0" text="Title">
                      <font>
-                        <Font size="35.0" />
+                        <Font size="60.0" />
                      </font>
                   </Label>
-                  <Label fx:id="authorLabel" layoutX="14.0" layoutY="102.0" prefHeight="28.0" prefWidth="172.0" text="Author" />
-                  <Label fx:id="tagLabel" layoutX="14.0" layoutY="130.0" prefHeight="35.0" prefWidth="178.0" text="Tag" />
-                  <Label fx:id="descriptionLabel" alignment="TOP_LEFT" layoutX="14.0" layoutY="171.0" prefHeight="123.0" prefWidth="405.0" text="Description" wrapText="true" />
-                  <Label fx:id="copiesLabel" layoutX="14.0" layoutY="302.0" prefHeight="22.0" prefWidth="393.0" text="Number of copies available" />
+                  <Label fx:id="authorLabel" layoutX="17.0" layoutY="110.0" prefHeight="35.0" prefWidth="438.0" text="Author:">
+                     <font>
+                        <Font size="24.0" />
+                     </font></Label>
+                  <Label fx:id="tagLabel" layoutX="17.0" layoutY="154.0" prefHeight="35.0" prefWidth="447.0" text="Tags:">
+                     <font>
+                        <Font size="24.0" />
+                     </font></Label>
+                  <Label fx:id="descriptionLabel" alignment="TOP_LEFT" layoutX="524.0" layoutY="110.0" prefHeight="408.0" prefWidth="489.0" text="Description:" wrapText="true">
+                     <font>
+                        <Font size="24.0" />
+                     </font></Label>
+                  <Label fx:id="copiesLabel" layoutX="17.0" layoutY="198.0" prefHeight="35.0" prefWidth="458.0" text="Copies available:">
+                     <font>
+                        <Font size="24.0" />
+                     </font></Label>
+                  <Line endX="900.0" layoutX="114.0" layoutY="102.0" startX="-100.0" />
+                  <Label fx:id="ratingLabel" layoutX="17.0" layoutY="243.0" prefHeight="35.0" prefWidth="458.0" text="Rating:">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="issueLabel" layoutX="17.0" layoutY="285.0" prefHeight="35.0" prefWidth="458.0" text="Borrow count:">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
          </children>
       </HBox>
    </center>
    <left>
-      <AnchorPane prefHeight="565.0" prefWidth="222.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="635.0" prefWidth="346.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fx:id="coverImage" fitHeight="368.0" fitWidth="200.0" layoutX="13.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="coverImage" fitHeight="480.0" fitWidth="300.0" layoutX="24.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <viewport>
                   <Rectangle2D />
                </viewport></ImageView>
+            <Button fx:id="editButton" layoutX="98.0" layoutY="510.0" mnemonicParsing="false" onAction="#onEditButtonClick" prefHeight="25.0" prefWidth="152.0" text="Edit" />
+            <TextField fx:id="durationField" alignment="CENTER" layoutX="99.0" layoutY="548.0" promptText="Duration" />
          </children>
       </AnchorPane>
    </left>
    <bottom>
-      <AnchorPane prefHeight="59.0" prefWidth="1412.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="62.0" prefWidth="1412.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="editButton" layoutX="92.0" layoutY="2.0" mnemonicParsing="false" onAction="#onEditButtonClick" text="Edit" />
-            <Button fx:id="backButton" alignment="TOP_LEFT" layoutX="632.0" layoutY="2.0" mnemonicParsing="false" onAction="#onBackButtonClick" text="Back" />
-            <TextField fx:id="durationField" alignment="CENTER" layoutX="207.0" promptText="Duration" />
+            <Button fx:id="backButton" alignment="TOP_LEFT" layoutX="154.0" layoutY="19.0" mnemonicParsing="false" onAction="#onBackButtonClick" text="Back" />
          </children>
       </AnchorPane>
    </bottom>
