--- a/src/main/resources/org/proview/test/NavBar.fxml
+++ b/src/main/resources/org/proview/test/NavBar.fxml
@@ -1,24 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <HBox prefHeight="50.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.NavBarView">
    <children>
       <AnchorPane fx:id="topPane" onKeyReleased="#onKeyReleased" prefHeight="4.0" prefWidth="1300.0" style="-fx-background-color: #FFC1C3;">
          <children>
-            <Button fx:id="logoutButton" layoutX="1123.0" layoutY="20.0" mnemonicParsing="false" onAction="#onLogoutButtonClick" text="Logout" />
-            <Button fx:id="editBookButton" layoutX="889.0" layoutY="20.0" mnemonicParsing="false" onAction="#onEditBookButtonClick" text="Edit Book" />
-            <Button fx:id="libraryButton" layoutX="1022.0" layoutY="20.0" mnemonicParsing="false" onAction="#onLibraryButtonClick" prefHeight="25.0" prefWidth="88.0" text="Library" />
+            <Button fx:id="logoutButton" layoutX="1096.0" layoutY="12.0" mnemonicParsing="false" onAction="#onLogoutButtonClick">
+               <graphic>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <FontIcon iconLiteral="fas-sign-out-alt">
+                           <font>
+                              <Font size="24.0" />
+                           </font></FontIcon>
+                        <Label text="Sign out" />
+                     </children>
+                  </VBox>
+               </graphic></Button>
+            <Button fx:id="editBookButton" layoutX="885.0" layoutY="12.0" mnemonicParsing="false" onAction="#onEditBookButtonClick" prefWidth="60.0">
+               <graphic>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <FontIcon iconLiteral="far-edit">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </FontIcon>
+                        <Label text="Edit" />
+                     </children>
+                  </VBox>
+               </graphic></Button>
+            <Button fx:id="libraryButton" layoutX="1024.0" layoutY="12.0" mnemonicParsing="false" onAction="#onLibraryButtonClick" prefWidth="60.0">
+               <graphic>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <FontIcon iconLiteral="fas-book">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </FontIcon>
+                        <Label text="Library" />
+                     </children>
+                  </VBox>
+               </graphic></Button>
             <Button fx:id="profileButton" layoutX="1214.0" layoutY="20.0" mnemonicParsing="false" onAction="#onProfileButtonClick" text="Profile" />
             <ImageView fitHeight="61.0" fitWidth="76.0" layoutX="14.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true" />
             <TextField fx:id="bookSearchBar" layoutX="52.0" layoutY="19.0" prefHeight="35.0" prefWidth="555.0" promptText="Testing search bar" />
-            <Button fx:id="searchButton" layoutX="632.0" layoutY="19.0" mnemonicParsing="false" onAction="#onSearchButtonClick" prefHeight="35.0" prefWidth="54.0" text="Search" />
-            <Button fx:id="issueButton" layoutX="966.0" layoutY="20.0" mnemonicParsing="false" onAction="#onIssueButtonClick" text="Issues" />
-            <Button fx:id="homeButton" layoutX="693.0" layoutY="24.0" mnemonicParsing="false" onAction="#onHomeButtonClick" text="Home" />
+            <Button fx:id="searchButton" layoutX="632.0" layoutY="19.0" mnemonicParsing="false" onAction="#onSearchButtonClick" prefHeight="35.0" prefWidth="60.0" text="Search">
+               <graphic>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <FontIcon iconLiteral="fas-search">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </FontIcon>
+                        <Label text="Search" />
+                     </children>
+                  </VBox>
+               </graphic></Button>
+            <Button fx:id="issueButton" layoutX="955.0" layoutY="12.0" mnemonicParsing="false" onAction="#onIssueButtonClick" prefWidth="60.0">
+               <graphic>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <FontIcon iconLiteral="far-list-alt">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </FontIcon>
+                        <Label text="Issues" />
+                     </children>
+                  </VBox>
+               </graphic></Button>
+            <Button fx:id="homeButton" layoutX="815.0" layoutY="12.0" mnemonicParsing="false" onAction="#onHomeButtonClick" prefWidth="60.0">
+               <graphic>
+                  <VBox alignment="CENTER">
+                     <children>
+                        <FontIcon iconLiteral="fas-home">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </FontIcon>
+                        <Label text="Home" />
+                     </children>
+                  </VBox>
+               </graphic></Button>
          </children>
       </AnchorPane>
    </children>
