--- a/src/main/resources/org/proview/test/EditProfileView.fxml
+++ b/src/main/resources/org/proview/test/EditProfileView.fxml
@@ -10,9 +10,9 @@
 
 <HBox prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.EditProfileView">
    <children>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+      <VBox alignment="CENTER" prefHeight="700.0" prefWidth="513.0">
          <children>
-            <ImageView fx:id="avatarField" fitHeight="150.0" fitWidth="274.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="avatarImageView" fitHeight="150.0" fitWidth="274.0" pickOnBounds="true" preserveRatio="true">
                <VBox.margin>
                   <Insets bottom="30.0" />
                </VBox.margin>
@@ -20,9 +20,9 @@
             <Button fx:id="changeAvatarButton" alignment="CENTER" mnemonicParsing="false" onAction="#onChangeAvatarButtonClick" text="Change Avatar" />
          </children>
       </VBox>
-      <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#onKeyReleased" prefHeight="700.0" prefWidth="647.0">
+      <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyReleased="#onKeyReleased" prefHeight="700.0" prefWidth="787.0">
          <children>
-            <Label fx:id="registerResultLabel" alignment="CENTER" prefHeight="17.0" prefWidth="408.0">
+            <Label fx:id="editProfileResultLabel" alignment="CENTER" prefHeight="17.0" prefWidth="408.0">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
