--- a/src/main/resources/org/proview/test/ProfileView.fxml
+++ b/src/main/resources/org/proview/test/ProfileView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -16,6 +17,7 @@
             <ImageView fx:id="avatarImageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="usernameField" alignment="CENTER" contentDisplay="CENTER" prefHeight="23.0" prefWidth="163.0" text="Username" />
             <Label fx:id="emailField" text="Email" />
+            <Button fx:id="editProfileButton" mnemonicParsing="false" onAction="#onEditProfileButtonClick" text="Edit Profile" />
          </children>
       </VBox>
    </left>
