--- a/src/main/resources/org/proview/test/ProfileView.fxml
+++ b/src/main/resources/org/proview/test/ProfileView.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
@@ -15,13 +14,6 @@
    <top>
       <fx:include source="NavBar.fxml" />
    </top>
-   <center>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </VBox>
-   </center>
    <left>
       <AnchorPane prefHeight="627.0" prefWidth="367.0" BorderPane.alignment="CENTER">
          <children>
@@ -52,4 +44,16 @@
          </children>
       </AnchorPane>
    </left>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="31.0" layoutY="14.0" prefHeight="30.0" prefWidth="191.0" text="Borrowing">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <ListView fx:id="borrowingCompactListView" layoutX="31.0" layoutY="56.0" prefHeight="115.0" prefWidth="800.0" />
+         </children>
+      </AnchorPane>
+   </center>
 </BorderPane>
