--- a/src/main/resources/org/proview/test/ProfileView.fxml
+++ b/src/main/resources/org/proview/test/ProfileView.fxml
@@ -4,9 +4,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
@@ -45,15 +48,15 @@
       </AnchorPane>
    </left>
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label layoutX="31.0" layoutY="14.0" prefHeight="30.0" prefWidth="191.0" text="Borrowing">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <ListView fx:id="borrowingCompactListView" layoutX="31.0" layoutY="56.0" prefHeight="115.0" prefWidth="800.0" />
-         </children>
-      </AnchorPane>
+      <ScrollPane>
+         <content>
+            <VBox>
+               <children>
+                  <HBox prefHeight="56.0" prefWidth="933.0" />
+                  <fx:include source="ProfileBookListCompactView.fxml" />
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
    </center>
 </BorderPane>
