--- a/src/main/resources/org/proview/test/ProfileBookListCompactView.fxml
+++ b/src/main/resources/org/proview/test/ProfileBookListCompactView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ProfileBookListCompactView">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ProfileBookListCompactView">
    <children>
       <Label prefHeight="30.0" prefWidth="191.0" text="Borrowing">
          <font>
@@ -32,7 +32,7 @@
             <Insets bottom="10.0" left="20.0" />
          </VBox.margin>
       </Label>
-      <ListView fx:id="borrowingCompactListView1" prefHeight="100.0" prefWidth="800.0">
+      <ListView fx:id="overdueCompactListView" prefHeight="100.0" prefWidth="800.0">
          <VBox.margin>
             <Insets left="20.0" right="30.0" />
          </VBox.margin>
@@ -48,7 +48,7 @@
             <Insets bottom="10.0" left="20.0" />
          </VBox.margin>
       </Label>
-      <ListView fx:id="borrowingCompactListView11" prefHeight="100.0" prefWidth="800.0">
+      <ListView fx:id="pastIssuesCompactListView" prefHeight="100.0" prefWidth="800.0">
          <VBox.margin>
             <Insets left="20.0" right="30.0" />
          </VBox.margin>
