--- a/src/main/resources/org/proview/test/ProfileBookListCompactView.fxml
+++ b/src/main/resources/org/proview/test/ProfileBookListCompactView.fxml
@@ -8,6 +8,22 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.ProfileBookListCompactView">
    <children>
+      <Label prefHeight="30.0" prefWidth="191.0" text="Favourite">
+         <font>
+            <Font size="20.0" />
+         </font>
+         <VBox.margin>
+            <Insets bottom="10.0" left="20.0" top="20.0" />
+         </VBox.margin>
+      </Label>
+      <ListView fx:id="favouriteCompactListView" prefHeight="100.0" prefWidth="800.0">
+         <padding>
+            <Insets bottom="10.0" />
+         </padding>
+         <VBox.margin>
+            <Insets left="20.0" right="30.0" />
+         </VBox.margin>
+      </ListView>
       <Label prefHeight="30.0" prefWidth="191.0" text="Borrowing">
          <font>
             <Font size="20.0" />
