--- a/src/main/resources/org/proview/test/BookInfoView.fxml
+++ b/src/main/resources/org/proview/test/BookInfoView.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.BookInfoView">
+<BorderPane fx:id="borderPane" prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.BookInfoView">
    <top>
       <fx:include source="NavBar.fxml" />
    </top>
@@ -82,6 +82,7 @@
                </viewport></ImageView>
             <Button fx:id="editButton" layoutX="98.0" layoutY="510.0" mnemonicParsing="false" onAction="#onEditButtonClick" prefHeight="25.0" prefWidth="152.0" text="Edit" />
             <TextField fx:id="durationField" alignment="CENTER" layoutX="99.0" layoutY="548.0" promptText="Duration" />
+            <Label fx:id="borrowingProblemLabel" alignment="CENTER" layoutX="70.0" layoutY="535.0" prefHeight="17.0" prefWidth="209.0" wrapText="true" />
          </children>
       </AnchorPane>
    </left>
