--- a/src/main/resources/org/proview/test/BookInfoView.fxml
+++ b/src/main/resources/org/proview/test/BookInfoView.fxml
@@ -64,7 +64,7 @@
                      </font>
                   </Label>
                   <Line endX="750.0" layoutX="114.0" layoutY="428.0" startX="-100.0" />
-                  <TextArea fx:id="reviewTextArea" layoutX="17.0" layoutY="441.0" prefHeight="213.0" prefWidth="850.0" />
+                  <TextArea fx:id="reviewTextArea" layoutX="17.0" layoutY="441.0" prefHeight="213.0" prefWidth="850.0" wrapText="true" />
                   <Button fx:id="submitReviewButton" layoutX="809.0" layoutY="671.0" mnemonicParsing="false" onAction="#onSubmitReviewButtonClick" text="Submit" />
                   <ListView fx:id="reviewListView" layoutX="13.0" layoutY="735.0" prefHeight="287.0" prefWidth="850.0" />
                   <Button fx:id="starButton" contentDisplay="GRAPHIC_ONLY" layoutX="824.0" layoutY="46.0" mnemonicParsing="false" onAction="#onStarButtonClicked" text="Button" />
