--- a/src/main/resources/org/proview/test/AdminManagementNavBarView.fxml
+++ b/src/main/resources/org/proview/test/AdminManagementNavBarView.fxml
@@ -4,17 +4,26 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="107.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.AdminManagementNavBarView">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="107.0" spacing="10.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.AdminManagementNavBarView">
    <children>
       <Button mnemonicParsing="false" onAction="#onIssuesButtonClick" text="Issues">
          <VBox.margin>
-            <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
+            <Insets />
          </VBox.margin>
       </Button>
       <Button mnemonicParsing="false" onAction="#onAddDeleteButtonClick" text="Add/Delete">
          <VBox.margin>
-            <Insets bottom="10.0" top="10.0" />
+            <Insets />
+         </VBox.margin>
+      </Button>
+      <Button mnemonicParsing="false" onAction="#onUsersButtonClick" text="Users">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </Button>
+      <Button mnemonicParsing="false" onAction="#onBooksButtonClick" text="Books">
+         <VBox.margin>
+            <Insets />
          </VBox.margin>
       </Button>
    </children>
