--- a/src/main/resources/org/proview/test/UserManagForAdminView.fxml
+++ b/src/main/resources/org/proview/test/UserManagForAdminView.fxml
@@ -4,17 +4,17 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.LibraryView">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="691.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.UserManagForAdminView">
     <top>
         <fx:include source="NavBarView.fxml" />
     </top>
     <left>
         <fx:include source="AdminManagementNavBarView.fxml" />
     </left>
-   <center>
+    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView fx:id="booksTableView" prefHeight="628.0" prefWidth="1193.0">
+            <TableView fx:id="usersTableView" prefHeight="624.0" prefWidth="1126.0" tableMenuButtonVisible="true">
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
